# entropick

./: .env.example  .env.grpc.example  .env.openentropy.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  STEERING_PLAN.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
deployments/: README.md
deployments/_template/: .env.example  README.md  docker-compose.yml
deployments/openentropy/: .env.example  README.md  run-local.sh
deployments/urandom/: .env.example  README.md  docker-compose.yml
docs/: config-reference.md  entropy-sources.md  experiments.md  extending.md  framework-support.md  getting-started.md  how-it-works.md
examples/docker/: Dockerfile.entropy-server
examples/open-webui/: README.md  qr_sampler_filter.json  qr_sampler_filter.py
examples/servers/: qrng_template_server.py  simple_urandom_server.py
examples/systemd/: qr-entropy-server.env  qr-entropy-server.service
experiments/: README.md  adaptive_injection.yaml  baseline.yaml  combined.yaml  logit_perturbation.yaml  m1_logit_noise.yaml  m2_temp_variance.yaml  m3_correlated_walk.yaml  min_p_filtering.yaml  selection_drift.yaml  temp_modulation.yaml  xtc_quantum.yaml
scripts/: injection_mode_test.py  openentropy_mode_test.py
src/qr_sampler/: __init__.py  config.py  exceptions.py  processor.py
src/qr_sampler/adapters/: __init__.py  _base.py  llamacpp.py  sglang.py  transformers.py
src/qr_sampler/amplification/: __init__.py  calibration.py  ecdf.py
src/qr_sampler/analysis/: __init__.py  _utils.py  compare.py  persistence.py  statistics.py
src/qr_sampler/entropy/: __init__.py  fallback.py  openentropy.py  quantum.py  sham.py
src/qr_sampler/injection/: __init__.py  _entropy_utils.py  correlated_walk.py  logit_noise.py  logit_perturbation.py  selection_drift.py  temp_modulation.py  temp_variance.py
src/qr_sampler/logging/: __init__.py  types.py
src/qr_sampler/pipeline/: __init__.py  context.py  registry.py  stage.py
src/qr_sampler/selection/: __init__.py
src/qr_sampler/stages/: __init__.py  _utils.py  adaptive_injection.py  correlated_walk.py  dry.py  entropy_fetch.py  eta.py  gumbel_selection.py  logit_noise.py  logit_perturbation.py  min_p.py  mirostat.py  selection.py  selection_drift.py  temp_modulation.py  temp_variance.py  temperature.py  tfs.py  top_n_sigma.py  typical.py  xtc.py
src/qr_sampler/temperature/: __init__.py  base.py  edt.py  fixed.py
tests/: conftest.py  helpers.py  test_config.py  test_contracts.py  test_examples_open_webui_filter.py  test_processor.py  test_statistical_properties.py
tests/test_adapters/: __init__.py  test_transformers_adapter.py
tests/test_amplification/: test_calibration.py  test_ecdf.py
tests/test_analysis/: __init__.py  test_compare.py  test_persistence.py  test_statistics.py
tests/test_entropy/: test_fallback.py  test_openentropy.py  test_quantum.py  test_sham.py
tests/test_injection/: __init__.py  test_correlated_walk.py  test_integration.py  test_logit_noise.py  test_logit_perturbation.py  test_selection_drift.py  test_temp_modulation.py  test_temp_variance.py
tests/test_logging/: test_logger.py
tests/test_pipeline/: test_dry.py  test_eta.py  test_gumbel_selection.py  test_mirostat.py  test_new_stages.py  test_stages.py  test_tfs.py  test_top_n_sigma.py  test_typical.py
tests/test_selection/: test_selector.py
